💄 fix squashed wide card images on mobile

--- a/frontend/styles/cards.scss
+++ b/frontend/styles/cards.scss
@@ -87,7 +87,8 @@ a > .box-card {
       &.img-lg-wide {
         max-width: 100%;
         width: auto;
-        height: 5rem;
+        max-height: 5rem;
+        height: auto;
         margin-top: -2.5rem;
       }
     }
